RESOLVED FIXED151775
Fix authentication requests with NetworkSession and canHandleHTTPSServerTrustEvaluation true
https://bugs.webkit.org/show_bug.cgi?id=151775
Summary Fix authentication requests with NetworkSession and canHandleHTTPSServerTrust...
Alex Christensen
Reported 2015-12-02 14:20:10 PST
Fix authentication requests with NetworkSession and canHandleHTTPSServerTrustEvaluation true
Attachments
Patch (6.06 KB, patch)
2015-12-02 14:24 PST, Alex Christensen
cdumez: review+
Alex Christensen
Comment 1 2015-12-02 14:24:27 PST
Alex Christensen
Comment 2 2015-12-02 15:17:12 PST
Chris Dumez
Comment 3 2015-12-02 15:18:38 PST
Comment on attachment 266471 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=266471&action=review r=me with suggestion > Source/WebKit2/NetworkProcess/NetworkLoad.cpp:-284 > - notImplemented(); I would just do a: "auto completionHandler = WTF::move(m_completionHandler);" here, to avoid having to nullify m_completionHandler in all the branches.
Alex Christensen
Comment 4 2015-12-02 15:51:30 PST
Note You need to log in before you can comment on or make changes to this bug.