Fix authentication requests with NetworkSession and canHandleHTTPSServerTrustEvaluation true https://bugs.webkit.org/show_bug.cgi?id=151775 rdar://problem/23586265

Reviewed by Chris Dumez.

In https://bugs.webkit.org/show_bug.cgi?id=150968 I copied functionality from
NetworkLoad::canAuthenticateAgainstProtectionSpaceAsync into NetworkLoad::didReceiveChallenge
but I overlooked the call to m_client.canAuthenticateAgainstProtectionSpaceAsync which is needed
if canHandleHTTPSServerTrustEvaluation is true.  This adds that call and moves what should happen
after that to NetworkLoad::continueCanAuthenticateAgainstProtectionSpace.

* NetworkProcess/NetworkLoad.cpp:
(WebKit::NetworkLoad::didReceiveChallenge):
(WebKit::NetworkLoad::didReceiveResponse):
(WebKit::NetworkLoad::continueCanAuthenticateAgainstProtectionSpace):
* NetworkProcess/NetworkLoad.h:
* NetworkProcess/NetworkSession.h:
* Shared/Authentication/AuthenticationManager.h:



Canonical link: https://commits.webkit.org/169919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192982 268f45cc-cd09-0410-ab3c-d52691b4dbfc